[tool.poetry]
name = "raresuperficialcareware"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
crayons = "^0.4.0"
fortnitepy = "^3.4.0"
sanic = "^21.3.2"
aiohttp = "^3.7.4"
aioconsole = "^0.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
